Finished editing modelling chapter based on willem review

--- a/glossary.tex
+++ b/glossary.tex
@@ -2,9 +2,9 @@
 
 % Acronym Entries
 \newacronym{DoF}{DoF}{Degree-of-Freedom}
-\newacronym{CoM}{CoM}{Centre of Mass}
-\newacronym{2D}{2D}{Two Dimensional}
-\newacronym{3D}{3D}{Three Dimensional}
+\newacronym{CoM}{CoM}{Centre-of-Mass}
+\newacronym{2D}{2D}{Two-Dimensional}
+\newacronym{3D}{3D}{Three-Dimensional}
 \newacronym{6DOF}{6DOF}{Six-Degrees-of-Freedom}
 \newacronym{NED}{NED}{North-East-Down}
 
