--- a/results/plots/prac_pediction_single_pend_theta_black.tex
+++ b/results/plots/prac_pediction_single_pend_theta_black.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Model predictions of practical flight data with an suspended payload for a North velocity step input
+    \caption{Model predictions of practical flight data with a suspended payload for a North velocity step input
         ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
     \label{fig:prac_pediction_single_pend_theta_black}
 \end{figure}
