--- a/results/results.tex
+++ b/results/results.tex
@@ -130,7 +130,7 @@
             \begin{figure}[!htb]
                 \centering
                 \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
-                \caption{Practical flight with an suspended elongated payload attached to Honeybee}
+                \caption{Practical flight with a suspended elongated payload attached to Honeybee}
                 \label{fig:practical_double_pendulum}
             \end{figure}     
 
