Added signature to declaration

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -33,9 +33,11 @@
 
 \noindent \begin{tabularx}{1.0\linewidth}{|L|L|}
     \hline
-    \vspace{1cm} {Studentenommer / \textit{Student number}} & \vspace{1cm} {Handtekening / \textit{Signature}} \\
+    \textbf{19977476}                                       & \hspace{5mm} \raisebox{-\totalheight}{\includegraphics[height=15mm]{frontmatter/fig/signature.png}} \\
+    {Studentenommer / \textit{Student number}}              & {Handtekening / \textit{Signature}} \\
     \hline
-    \vspace{1cm} {Voorletters en van / \textit{Initials and surname}} & \vspace{1cm} {Datum / \textit{Date}} \\
+    \textbf{JM Louw}                                        & \textbf{1 November 2021}\\
+    {Voorletters \& van / \textit{Initials \& surname}}     & {Datum / \textit{Date}} \\
     \hline
 \end{tabularx}
 
