--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -33,7 +33,7 @@
 
 \noindent \begin{tabularx}{1.0\linewidth}{|L|L|}
     \hline
-    \textbf{19977476}                                       & \hspace{5mm} \raisebox{-\totalheight}{\includegraphics[height=15mm]{frontmatter/fig/signature.png}} \\
+    \vspace{12mm} \textbf{19977476}                                       & \hspace{5mm} \raisebox{-\totalheight}{\includegraphics[height=15mm]{frontmatter/fig/signature.png}} \\
     {Studentenommer / \textit{Student number}}              & {Handtekening / \textit{Signature}} \\
     \hline
     \textbf{JM Louw}                                        & \textbf{1 November 2021}\\
