--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -190,10 +190,11 @@
 % Front matter
 \input{frontmatter/masters_title_page}
 \pagenumbering{roman}
-\input{frontmatter/acknowledgements}
 \input{frontmatter/declaration}
 \input{frontmatter/abstract}
+\input{frontmatter/uittreksel}
 \input{frontmatter/publication}
+\input{frontmatter/acknowledgements}
 \tableofcontents
 
 \renewcommand{\listfigurename}{List of figures}
